syntax = "proto3";

package protoManager;

option go_package = "./protoManager";

import "google/api/annotations.proto";


message NodeAgent {
    int64 id = 1;
    string ip = 2;
    string domain = 3;
}

message RegistrateResponse {
    NodeAgent nodeAgent = 1;
}

message RegistrateRequest {
    string ip = 1;
    string domain = 2;
}

service manager {
    rpc Registrate (RegistrateRequest) returns (RegistrateResponse);
    rpc GetNode (GetNodeRequest) returns (GetNodeResponse){
        option (google.api.http) = {
            get: "/api/nodes/{id}"
        };
    };
}

message GetNodeRequest{
    int64 id = 1;
}

message GetNodeResponse{
    int64 code = 1;
    NodeAgent nodeAgent = 2;
    string message = 3;
}